--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,24 @@
+export default async function handler(req, res) {
+  const { message } = req.body;
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Freak AI Asistent</title>
-  <style>
-    body { background: #000; color: #0ff; font-family: monospace; text-align: center; padding: 2em; }
-    img { width: 150px; }
-    textarea { width: 80%; height: 100px; }
-    button { padding: 10px 20px; margin-top: 10px; }
-    pre { text-align: left; background: #111; padding: 1em; border-radius: 5px; }
-  </style>
-</head>
-<body>
-  <img src="/avatar.png" alt="Freak Patrick Logo" />
-  <h1>Freak AI Asistent</h1>
-  <textarea id="userInput" placeholder="Napíš svoju otázku..."></textarea><br/>
-  <button onclick="sendMessage()">Odoslať</button>
-  <pre id="response"></pre>
-
-  <script>
-    async function sendMessage() {
-      const input = document.getElementById('userInput').value;
-      const resBox = document.getElementById('response');
-      resBox.textContent = "Spracúvam...";
-      const res = await fetch('/api/chat', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message: input })
-      });
-      const data = await res.json();
-      resBox.textContent = data.response;
+  const response = await fetch(
+    "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=" + process.env.GEMINI_API_KEY,
+    {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        contents: [
+          {
+            role: "user",
+            parts: [{ text: message }]
+          }
+        ]
+      })
     }
-  </script>
-</body>
-</html>
+  );
+
+  const data = await response.json();
+  res.status(200).json({ response: data.candidates[0].content.parts[0].text });
+}
