--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,14 @@
-export default async function handler(req, res) {
-  const { message } = req.body;
-
-  const response = await fetch(
-    "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=" + process.env.GEMINI_API_KEY,
-    {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        contents: [
-          {
-            role: "user",
-            parts: [{ text: message }]
-          }
-        ]
-      })
-    }
-  );
-
-  const data = await response.json();
-  res.status(200).json({ response: data.candidates[0].content.parts[0].text });
-}
+<script>
+  async function sendMessage() {
+    const input = document.getElementById('userInput').value;
+    const responseDiv = document.getElementById('response');
+    responseDiv.textContent = "Spracúvam...";
+    const res = await fetch('/api/chat', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ message: input })
+    });
+    const data = await res.json();
+    responseDiv.textContent = data.response;
+  }
+</script>
